--- a/.env
+++ b/.env
@@ -7,6 +7,10 @@ JWT_SECRET=your_jwt_secret_here
 # Google OAuth Client ID (for Google Login)
 GOOGLE_CLIENT_ID="51769715869-biflfhfa312lvnacpa6rvk08i211ml5k.apps.googleusercontent.com"
 
+REACT_APP_GOOGLE_CLIENT_ID="51769715869-biflfhfa312lvnacpa6rvk08i211ml5k.apps.googleusercontent.com"
+
+
+
 # SMTP (Gmail or any other provider) for password reset
 SMTP_EMAIL="tronkazembe@gmail.com"
 SMTP_PASS="jmwb kpjh jqiw nqse"
